plan correction